--- a/docs/content/guides/developer/app-examples/trustless-swap/smart-contracts.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap/smart-contracts.mdx
@@ -15,14 +15,6 @@ In this part of the guide, you will write the Move contracts that perform the tr
 
 ## `Locked` and `Key`
 
-:::info Resources for this section
-
-- [Full source code](https://github.com/MystenLabs/sui/blob/705ee1ed3ce8cfadc4597c6facb6769d7dfb5896/examples/trading/contracts/escrow/sources/lock.move)
-- Concept: [Wrapped Objects](../../../../concepts/versioning.mdx#wrapped-objects)
-- Concept: [ID Pointer](../../../../concepts/sui-move-concepts/patterns/id-pointer.mdx)
-
-:::
-
 Once we initiate a trade, we don't want the other party to be able to modify the object they agreed to trade with us: imagine we're trading in-game items and we agree to trade a weapon with all its attachments, and its owner strips all its attachments just before the trade!
 
 Usually this is handled by having a third party hold the items in escrow to make sure they are not tampered with, but this requires trusting that the third party won't tamper with it themselves, and/or paying them to ensure that doesn't happen.
@@ -87,14 +79,15 @@ public fun unlock<T: store>(locked: Locked<T>, key: Key): T {
 
 Together, they ensure that a lock and key cannot have existed before the lock operation, and will not exist after a successful unlock – it is single use.
 
-## Testing `Locked` and `Key`
-
-:::info Resources for this section
+:::info Additional Resources
 
 - [Full source code](https://github.com/MystenLabs/sui/blob/705ee1ed3ce8cfadc4597c6facb6769d7dfb5896/examples/trading/contracts/escrow/sources/lock.move)
-- Concept: [Test Scenario](../../first-app/build-test.mdx#testing-a-package)
+- Concepts: [Wrapped Objects](../../../../concepts/versioning.mdx#wrapped-objects)
+- Concepts: [ID Pointer](../../../../concepts/sui-move-concepts/patterns/id-pointer.mdx)
 
 :::
+
+## Testing `Locked` and `Key`
 
 Move's type system guarantees that a given `Key` cannot be re-used (because `unlock` accepts it by value), but there are some properties that we need to confirm with tests:
 
@@ -151,17 +144,14 @@ fun test_lock_key_mismatch() {
 }
 ```
 
-## The `Escrow` protocol
+:::info Additional Resources
 
-:::info Resources for this section
-
-- [Full source code](https://github.com/MystenLabs/sui/blob/705ee1ed3ce8cfadc4597c6facb6769d7dfb5896/examples/trading/contracts/escrow/sources/shared.move)
-- Concept: [ID Pointer](../../../../concepts/sui-move-concepts/patterns/id-pointer)
-- Concept: [Shared Objects](../../../../concepts/object-ownership/shared)
-- Concept: [Shared Object Deletion](https://blog.sui.io/ephemeral-shared-objects/)
-- Concept: [PTBs](../../../../concepts/transactions/prog-txn-blocks)
+- [Full source code](https://github.com/MystenLabs/sui/blob/705ee1ed3ce8cfadc4597c6facb6769d7dfb5896/examples/trading/contracts/escrow/sources/lock.move)
+- Concepts: [Test Scenario](../../first-app/build-test.mdx#testing-a-package)
 
 :::
+
+## The `Escrow` protocol
 
 Trading proceeds in three steps:
 
@@ -270,6 +260,214 @@ public fun swap<T: key + store, U: key + store>(
 }
 ```
 
+:::info Additional Resources
+
+- [Full source code](https://github.com/MystenLabs/sui/blob/705ee1ed3ce8cfadc4597c6facb6769d7dfb5896/examples/trading/contracts/escrow/sources/shared.move)
+- Concepts: [ID Pointer](../../../../concepts/sui-move-concepts/patterns/id-pointer)
+- Concepts: [Shared Objects](../../../../concepts/object-ownership/shared)
+- Concepts: [Shared Object Deletion](https://blog.sui.io/ephemeral-shared-objects/)
+- Concepts: [PTBs](../../../../concepts/transactions/prog-txn-blocks)
+
+:::
+
+## Testing
+
+Tests for the `escrow` module will be more involved than for `lock` – we will take advantage of `test_scenario`'s ability to simulate multiple transactions from different senders, and interact with shared objects.
+
+We will focus on the test for a successful swap, but a link to all the tests can be found later on.
+
+As with the lock test, we start by creating a function to mint a test coin. We also create some constants to represent our transaction senders, `ALICE` and `BOB`.
+
+```move
+#[test_only] use sui::coin::{Self, Coin};
+#[test_only] use sui::sui::SUI;
+#[test_only] use sui::test_scenario::{Self as ts, Scenario};
+
+#[test_only] const ALICE: address = @0xA;
+#[test_only] const BOB: address = @0xB;
+
+#[test_only]
+fun test_coin(ts: &mut Scenario): Coin<SUI> {
+    coin::mint_for_testing<SUI>(42, ts::ctx(ts))
+}
+```
+
+The test body starts with a call to `test_scenario::begin` and ends with a call to `test_scenario::end`. It doesn't matter which address we pass to `begin`, because we will pick one of `ALICE` or `BOB` at the start of each new transaction we write, so we set it to `@0x0`:
+
+```move
+#[test]
+fun test_successful_swap() {
+    let ts = ts::begin(@0x0);
+
+    // Rest of the test ...
+
+    ts::end(ts);
+}
+```
+
+The first transaction is from `BOB` who creates a coin and locks it. We remember the ID of the coin and the ID of the key, which we will need later, but we transfer the locked object and the key itself to `BOB`, because this is what would happen with a real transaction: When simulating transactions in a test, we should only keep around primitive values, not whole objects, which would need to be written to chain between transactions.
+
+We write these transactions inside the `test_succesful_swap` function, between the call to `begin` and `end`.
+
+```move
+let (i2, ik2) = {
+    ts::next_tx(&mut ts, BOB);
+    let c = test_coin(&mut ts);
+    let cid = object::id(&c);
+    let (l, k) = lock::lock(c, ts::ctx(&mut ts));
+    let kid = object::id(&k);
+    transfer::public_transfer(l, BOB);
+    transfer::public_transfer(k, BOB);
+    (cid, kid)
+};
+```
+
+Next, `ALICE` comes along and sets up the `Escrow`, which locks their coin. They register their interest for `BOB'`s coin by referencing `BOB`'s key's ID (`ik2`):
+
+```move
+let i1 = {
+    ts::next_tx(&mut ts, ALICE);
+    let c = test_coin(&mut ts);
+    let cid = object::id(&c);
+    create(c, ik2, BOB, ts::ctx(&mut ts));
+    cid
+};
+```
+
+Finally, `BOB` completes the trade by calling `swap`. We use the `take_shared` function to simulate accepting a shared input. It uses type inference to know that the object must be an `Escrow`, and finds the last object of this type that was shared (by `ALICE` in the previous transaction). Similarly, we use `take_from_sender` to simulate accepting owned inputs (in this case, `BOB`'s lock and key). The coin returned by `swap` is transferred back to `BOB`, as if it was called as part of a PTB, followed by a transfer command.
+
+```move
+{
+    ts::next_tx(&mut ts, BOB);
+    let escrow = ts::take_shared(&ts);
+    let k2: Key = ts::take_from_sender(&ts);
+    let l2: Locked<Coin<SUI>> = ts::take_from_sender(&ts);
+    let c = swap<Coin<SUI>, Coin<SUI>>(
+        escrow,
+        k2,
+        l2,
+        ts::ctx(&mut ts),
+    );
+
+    transfer::public_transfer(c, BOB);
+};
+```
+
+The rest of the test is designed to check that `ALICE` has `BOB`'s coin and vice versa. It starts by calling `next_tx` to make sure the effects of the previous transaction have been committed, before running the necessary checks.
+
+```move
+ts::next_tx(&mut ts, @0x0);
+
+{
+    let c: Coin<SUI> = ts::take_from_address_by_id(&ts, ALICE, i2);
+    ts::return_to_address(ALICE, c);
+};
+
+{
+    let c: Coin<SUI> = ts::take_from_address_by_id(&ts, BOB, i1);
+    ts::return_to_address(BOB, c);
+};
+```
+
+:::info Additional Resources
+
+- [Full source code](https://github.com/MystenLabs/sui/blob/705ee1ed3ce8cfadc4597c6facb6769d7dfb5896/examples/trading/contracts/escrow/sources/shared.move)
+- Guides: [Test Scenario](../../../../guides/developer/first-app/build-test#testing-a-package)
+
+:::
+
+## Observability
+
+The `escrow` Move package is now functional: We could publish it on-chain and perform trustless swaps by creating transactions. Creating those transactions requires knowing the IDs of `Locked`, `Key`, and `Escrow` objects.
+
+`Locked` and `Key` objects are typically owned by the transaction sender, and so can be queried through the Sui RPC, but `Escrow` objects are shared, and it is useful to be able to query them by their sender and recipient (so that users can see the trades they have offered and received).
+
+Querying `Escrow` objects by their sender or recipient will require custom indexing, and to make it easy for the indexer to spot relevant transactions we will add the following **events** to `escrow.move`:
+
+```move
+struct EscrowCreated has copy, drop {
+    escrow_id: ID,
+    key_id: ID,
+    sender: address,
+    recipient: address,
+    item_id: ID,
+}
+
+struct EscrowSwapped has copy, drop {
+    escrow_id: ID
+}
+
+struct EscrowCancelled has copy, drop {
+    escrow_id: ID
+}
+```
+
+These events will be emitted by functions that are responsible for various aspects of the escrow's lifecycle, so that the custom indexer can subscribe to transactions that emit these events, and only process those, rather than the whole chain state:
+
+```move
+use sui::event;
+
+public fun create<T: key + store>(
+    escrowed: T,
+    exchange_key: ID,
+    recipient: address,
+    ctx: &mut TxContext
+) {
+    let escrow = Escrow<T> { /* ... */ };
+
+    event::emit(EscrowCreated {
+        escrow_id: object::id(&escrow),
+        key_id: exchange_key,
+        sender: escrow.sender,
+        recipient,
+        item_id: object::id(&escrowed),
+    });
+
+    /* ... */
+}
+
+public fun swap<T: key + store, U: key + store>(
+    escrow: Escrow<T>,
+    key: Key,
+    locked: Locked<U>,
+    ctx: &TxContext,
+): T {
+    let Escrow {
+        id,
+        sender,
+        recipient,
+        exchange_key,
+    } = escrow;
+
+    /* ... */
+
+    event::emit(EscrowSwapped {
+        escrow_id: object::uid_to_inner(&id),
+    });
+
+    /* ... */
+}
+
+public fun return_to_sender<T: key + store>(
+    escrow: Escrow<T>,
+    ctx: &TxContext
+): T {
+
+    event::emit(EscrowCancelled {
+        escrow_id: object::id(&escrow)
+    });
+
+    /* ... */
+}
+```
+
+:::info Additional Resources
+
+- Concepts: [Events](../../../../concepts/events)
+
+:::
+
+
 ## Deployment
 
 {@include: ../../../../snippets/initialize-sui-client-cli.mdx}
@@ -278,6 +476,8 @@ public fun swap<T: key + store, U: key + store>(
 
 ## Next steps
 
-You have written and deployed the Move package. To turn this into a complete dApp with frontend, you need to create a frontend. For the frontend to be updated, create an indexer that listens to the blockchain as escrows are made and swaps are fulfilled.
+Well done. You have written and deployed the Move package! 🚀
 
-For the next step, you [create the indexing service](./backend.mdx).
+To turn this into a complete dApp, you need to create a frontend. However, for the frontend to be updated, it has to listen to the blockchain as escrows are made and swaps are fulfilled.
+
+To achieve this, in the next step you will [create an indexing service](./backend.mdx).
